--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "file-saver": "^2.0.5",
     "firebase": "^9.6.6",
     "framer-motion": "^4.1.17",
+    "jszip": "^3.7.1",
+    "jszip-utils": "^0.1.0",
     "react": "^16.13.1",
+    "react-confirm-alert": "^2.8.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.3.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
